Estadistica Compras por Tipo de Tarjeta

--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -498,6 +498,12 @@
     <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorMarca\ComprasPorMarca.Designer.cs">
       <DependentUpon>ComprasPorMarca.cs</DependentUpon>
     </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorTipo\ComprasPorTipo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorTipo\ComprasPorTipo.Designer.cs">
+      <DependentUpon>ComprasPorTipo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logged\Ventanas\Facturacion\Facturacion_Ventana.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -854,6 +860,10 @@
       <DependentUpon>ComprasPorMarca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorMarca\ComprasPorMarca.rdlc" />
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorTipo\ComprasPorTipo.rdlc" />
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorTipo\ComprasPorTipo.resx">
+      <DependentUpon>ComprasPorTipo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Logged\Ventanas\Facturacion\Facturacion_Ventana.resx">
       <DependentUpon>Facturacion_Ventana.cs</DependentUpon>
     </EmbeddedResource>
