reportes y estadisticas fede
reporte tipo tarjeta y tipo documento
estadisticas marcas tarjeta por cliente y tipo tarjeta por cliente

--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -492,6 +492,31 @@
     <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasRecaudacion\VentanaRecaudacion.Designer.cs">
       <DependentUpon>VentanaRecaudacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\DatosEstadisticaMarcasTarjeta.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DatosEstadisticaMarcasTarjeta.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\EstadisticaMarcasPorTarjeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\EstadisticaMarcasPorTarjeta.Designer.cs">
+      <DependentUpon>EstadisticaMarcasPorTarjeta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\DatosEstadisticaTiposTarjeta.cs">
+      <DependentUpon>DatosEstadisticaTiposTarjeta.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\DatosEstadisticaTiposTarjeta.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DatosEstadisticaTiposTarjeta.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\EstadisticasTipoTarjeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\EstadisticasTipoTarjeta.Designer.cs">
+      <DependentUpon>EstadisticasTipoTarjeta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logged\Ventanas\Facturacion\Facturacion_Ventana.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -614,6 +639,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesTipoDocumento\ReporteDocumento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesTipoDocumento\ReporteDocumento.Designer.cs">
+      <DependentUpon>ReporteDocumento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteClientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -649,6 +680,12 @@
     </Compile>
     <Compile Include="Reportes\Ventanas_Reportes\ReportesProductos\ReporteProductos.Designer.cs">
       <DependentUpon>ReporteProductos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesTipoTarjeta\ReporteTipoTarjeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\Ventanas_Reportes\ReportesTipoTarjeta\ReporteTipoTarjeta.Designer.cs">
+      <DependentUpon>ReporteTipoTarjeta.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\Ventanas_Reportes\ReportesUsuarios\ReporteUsuarios.cs">
       <SubType>Form</SubType>
@@ -839,6 +876,14 @@
     <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasRecaudacion\VentanaRecaudacion.resx">
       <DependentUpon>VentanaRecaudacion.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\EstadisticaMarcasPorTarjeta.resx">
+      <DependentUpon>EstadisticaMarcasPorTarjeta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\EstadisticaMarcaTarjeta.rdlc" />
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\EstadisticasTipoTarjeta.resx">
+      <DependentUpon>EstadisticasTipoTarjeta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\ReporteEstadisticaTipoTarjeta.rdlc" />
     <EmbeddedResource Include="Logged\Ventanas\Facturacion\Facturacion_Ventana.resx">
       <DependentUpon>Facturacion_Ventana.cs</DependentUpon>
     </EmbeddedResource>
@@ -909,6 +954,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesTipoDocumento\ReportTipoDocumento.rdlc" />
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesTipoDocumento\ReporteDocumento.resx">
+      <DependentUpon>ReporteDocumento.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesClientes\ReportClientes.rdlc" />
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesClientes\ReporteClientes.resx">
       <DependentUpon>ReporteClientes.cs</DependentUpon>
@@ -933,6 +982,10 @@
       <DependentUpon>ReporteProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesProductos\ReportProductos.rdlc" />
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesTipoTarjeta\ReporteTipoTarjeta.resx">
+      <DependentUpon>ReporteTipoTarjeta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesTipoTarjeta\ReportTipoTarjeta.rdlc" />
     <EmbeddedResource Include="Reportes\Ventanas_Reportes\ReportesUsuarios\ReporteUsuarios.resx">
       <DependentUpon>ReporteUsuarios.cs</DependentUpon>
     </EmbeddedResource>
@@ -1017,6 +1070,28 @@
     </None>
     <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasRecaudacion\DatosRecaudacion.xss">
       <DependentUpon>DatosRecaudacion.xsd</DependentUpon>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\DatosEstadisticaMarcasTarjeta.xsc">
+      <DependentUpon>DatosEstadisticaMarcasTarjeta.xsd</DependentUpon>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\DatosEstadisticaMarcasTarjeta.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DatosEstadisticaMarcasTarjeta.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjeta\DatosEstadisticaMarcasTarjeta.xss">
+      <DependentUpon>DatosEstadisticaMarcasTarjeta.xsd</DependentUpon>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\DatosEstadisticaTiposTarjeta.xsc">
+      <DependentUpon>DatosEstadisticaTiposTarjeta.xsd</DependentUpon>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\DatosEstadisticaTiposTarjeta.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DatosEstadisticaTiposTarjeta.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTipoTarjeta\DatosEstadisticaTiposTarjeta.xss">
+      <DependentUpon>DatosEstadisticaTiposTarjeta.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
