--- a/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
+++ b/Shopping_Buy_All/Shopping_Buy_All/Shopping_Buy_All.csproj
@@ -432,6 +432,14 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\Total_Clientes\TotalClientes.cs">
+      <DependentUpon>TotalClientes.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\Total_Clientes\TotalClientes.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TotalClientes.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\ReporteEstadisticasClientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -504,11 +512,11 @@
     <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorTipo\ComprasPorTipo.Designer.cs">
       <DependentUpon>ComprasPorTipo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\VentanaRecaudacion.cs">
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\VentanaEstadisticasTarjetas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\VentanaRecaudacion.Designer.cs">
-      <DependentUpon>VentanaRecaudacion.cs</DependentUpon>
+    <Compile Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\VentanaEstadisticasTarjetas.Designer.cs">
+      <DependentUpon>VentanaEstadisticasTarjetas.cs</DependentUpon>
     </Compile>
     <Compile Include="Logged\Ventanas\Facturacion\Facturacion_Ventana.cs">
       <SubType>Form</SubType>
@@ -843,6 +851,7 @@
     <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\ReporteEstadisticasClientes.resx">
       <DependentUpon>ReporteEstadisticasClientes.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\Total_Clientes\TotalClientes.rdlc" />
     <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasFacturacion\EstadisticaFacturacion.rdlc" />
     <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasFacturacion\ReporteEstadisticasFacturacion.resx">
       <DependentUpon>ReporteEstadisticasFacturacion.cs</DependentUpon>
@@ -870,8 +879,8 @@
     <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\UsoPorTipo\ComprasPorTipo.resx">
       <DependentUpon>ComprasPorTipo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\VentanaRecaudacion.resx">
-      <DependentUpon>VentanaRecaudacion.cs</DependentUpon>
+    <EmbeddedResource Include="Estadisticas\Ventanas_Estadisticas\EstadisticasTarjetas\VentanaEstadisticasTarjetas.resx">
+      <DependentUpon>VentanaEstadisticasTarjetas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Logged\Ventanas\Facturacion\Facturacion_Ventana.resx">
       <DependentUpon>Facturacion_Ventana.cs</DependentUpon>
@@ -1023,6 +1032,17 @@
     <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\Clientes_Sexo\AccesoDatosSexo.xss">
       <DependentUpon>AccesoDatosSexo.xsd</DependentUpon>
     </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\Total_Clientes\TotalClientes.xsc">
+      <DependentUpon>TotalClientes.xsd</DependentUpon>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\Total_Clientes\TotalClientes.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TotalClientes.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasClientes\Total_Clientes\TotalClientes.xss">
+      <DependentUpon>TotalClientes.xsd</DependentUpon>
+    </None>
     <None Include="Estadisticas\Ventanas_Estadisticas\EstadisticasFacturacion\EstadisticasFacturacion.xsc">
       <DependentUpon>EstadisticasFacturacion.xsd</DependentUpon>
     </None>
@@ -1133,6 +1153,7 @@
     <None Include="Resources\%28Tutosinvhizible%29 %2845%29.jpg" />
     <None Include="Resources\%28180%29.jpg" />
     <None Include="Resources\help-info.png" />
+    <None Include="Resources\mega.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
